tests/k8s_testcases/network-policy-checks-bad-path/metadata_wrong_form.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  # name includes _
  name: metadata_name_test7
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
